# rust-cloud-lab

./: .env.test  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  example_env.txt  journal.md
.github/workflows/: ci.yml
k8s/: deployment.yaml  localstack.yaml  secret.yaml  service.yaml
src/: lib.rs  main.rs
src/infra/s3/: app_state.rs  mod.rs  repository.rs  s3.rs
src/infra/sqs/: mod.rs  repository.rs  sqs.rs
src/routes/: s3.rs  sqs.rs
src/services/s3/: mod.rs  s3.rs  s3_test.rs
src/services/sqs/: mod.rs  sqs.rs  sqs_test.rs
tests/: integrations.rs
