[package]
name = "rust-cloud-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.129.0"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1"
uuid = { version = "1.23.1", features = ["v4"] }
dotenvy = "0.15.7"
async-trait = "0.1.89"
